--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "simple_plugin"
+name = "ofx_rs_basic"
 version = "0.0.1"
 authors = ["Nicola Orru <nigu.orru@gmail.com>"]
 keywords = ["ofx", "openfx", "effects", "natron", "nuke"]
@@ -9,14 +9,12 @@ license = "Apache-2.0"
 publish = false # insurance against accidents
 
 [lib]
-name="simple_plugin"
+name="ofx_rs_basic"
 crate-type = ["cdylib"]
 path="src/lib.rs"
 
 [dependencies]
-lazy_static = "1.1"
 libc = "0.2"
+log="0.4"
+log4rs = "0.8"
 ofx = { path = "../../ofx" }
-log="*"
-log4rs = "*"
-boolinator = "2.4"
