--- a/ofx-sys/Cargo.toml
+++ b/ofx-sys/Cargo.toml
@@ -10,6 +10,8 @@ license = "Apache-2.0"
 # publish = false # insurance against accidents
 
 build = "build/main.rs"
+exclude = ["native/openfx/*"]
+include = ["native/openfx/include/*", "native/openfx/Support/*"]
 
 [lib]
 name="ofx_sys"
