--- a/ofx-sys/Cargo.toml
+++ b/ofx-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ofx_sys"
-version = "0.1.1"
+version = "0.2.0"
 authors = ["Nicola Orru <nigu.orru@gmail.com>"]
 keywords = ["ofx", "openfx", "effects", "natron", "nuke"]
 #edition = "2018"
@@ -15,8 +15,7 @@ include = [
 	"Cargo.toml",
 	"src/**",
 	"build/**",
-	"native/openfx/include/**",
-	"native/openfx/Support/**"
+	"native/openfx/include/**"
 ]
 
 [lib]
